Sort entries in requirements.txt

--- a/python/RateManager/requirements.txt
+++ b/python/RateManager/requirements.txt
@@ -1,14 +1,15 @@
+codecov
+dash
+dask
+matplotlib
+numpy
+pandas
+paramiko
+pint==0.9
+pycodestyle
+quadpy
+scipy
+six
 sphinx
 sphinx_rtd_theme
-matplotlib
 tornado
-numpy
-scipy
-quadpy
-six
-pycodestyle
-codecov
-pandas
-pint==0.9
-dask
-paramiko
